fix | experience wrap borderg

--- a/src/features/PortfolioContent/Experience/Experience.scss
+++ b/src/features/PortfolioContent/Experience/Experience.scss
@@ -14,15 +14,17 @@ $work_experience_margin_top: 75px;
         left: -55px;
         top: 30px;
         width: 200px;
+        z-index: 1;
+        outline: 15px solid;
     }
 
     .work-experience-years {
         position: absolute;
         top: 30px;
         right: 0;
-        padding: 5px 20px;  
+        padding: 5px 20px;
         font-size: x-small;
-        color: green; 
+        color: green;
     }
 
     .work-experience-container {
